# Skincare-Filter-Web-Application

./: .codecov.yml  .coveragerc  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .safety-project.ini  ARCHITECTURE.md  CONTRIBUTING.md  PRODUCT.md  PROJECT_TREE.md  README.md  STATUS.md  codecov.yml  conftest.py  db.sqlite3  manage.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/setup-python-uv/: action.yml
.github/instructions/: copilot-instructions.md
.github/scripts/: annotate_safety.py
.github/workflows/: ci.yml  lint.yml  test.yml  uv-export.yml
allergies/: admin.py  apps.py  exceptions.py  forms.py  models.py  services.py  urls.py  views.py
allergies/constants/: choices.py  compounds.py
allergies/migrations/: 0001_initial.py  0002_initial.py  0003_remove_symptom_onset_check_constraint.py  0004_rename_related_name_user_allergies.py  0005_rename_related_name_user_allergy_entries.py
allergies/templates/allergies/: allergies_list.html  edit_allergy.html
allergies/tests/: test_admin_error_handling.py  test_constants.py  test_exceptions.py  test_forms.py  test_models.py  test_services.py  test_views.py  test_views_error_handling.py
docs/: DEPLOYMENT.md  README.md  SECURITY.md  TESTING.md
docs/dev/: ADMIN.md  DEPLOYMENT.md  FORMS.md  LOGGING.md  MIGRATIONS.md  README.md  SECURITY.md  TESTING.md
docs/dev/adr/: 0001-constants-compounds-decision.md
skincare_project/: asgi.py  settings.py  urls.py  views.py  wsgi.py
skincare_project/tests/: test_views_error_handling.py
static/css/: main.css  style.css
static/js/: main.js
templates/: base.html  home.html  layout.html  product.html  user.html
templates/allergies/: allergies_list.html  edit_allergy.html
user/: urls.py
users/: _log_utils.py  admin.py  apps.py  managers.py  models.py  signals.py  tests.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py
users/templates/user/: user_list.html
users/templates/users/: user_list.html
