[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skincare-filter"
version = "0.1.0"
description = "Skincare Allergy Filter - Cross-reference product ingredients against personal allergens"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [
    {name = "RJChoe", email = "your-email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
"asgiref==3.11.0",
"dj-database-url==2.2.0",
"django==6.0",
"psycopg2-binary==2.9.11",
"sqlparse==0.5.5",
"typing-extensions==4.15.0",
"tzdata==2025.3",
]

[project.urls]
Homepage = "https://github.com/RJChoe/Skincare-Filter-Web-Application"
Repository = "https://github.com/RJChoe/Skincare-Filter-Web-Application"
Issues = "https://github.com/RJChoe/Skincare-Filter-Web-Application/issues"

# ============================================================================
# uv Configuration
# ============================================================================
# Python version pinning: .python-version pins local development to 3.14 for
# consistency across the team and with CI/CD. However, requires-python = ">=3.14"
# remains flexible to allow the package to work with future Python versions.
[tool.uv]
# Prefer uv-managed Python installations for reproducibility
python-preference = "only-managed"

# Automatically download Python if the required version is missing
python-downloads = "automatic"

# Compile bytecode for faster imports
compile-bytecode = true

# Always resolve to the highest compatible version
resolution = "highest"

# Only use prereleases when necessary (no stable version available)
prerelease = "if-necessary"

# Environment markers for cross-platform support
environments = ["platform_system == 'Windows'", "platform_system != 'Windows'"]

# ============================================================================
# PEP 735 Dependency Groups
# ============================================================================
[dependency-groups]
# Testing tools and frameworks
test = [
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pytest-django==4.11.1",
    "coverage==7.13.0",
    "pluggy==1.6.0",
    "iniconfig==2.3.0",
    "psutil==6.0.0",
]

# Linting and code formatting tools
lint = [
    "ruff==0.14.10",
    "pre-commit==4.5.1",
    "identify==2.6.15",
    "nodeenv==1.10.0",
    "cfgv==3.5.0",
    "pathspec==0.12.1",
]

# Type checking tools
type-check = [
    "mypy==1.19.1",
    "mypy-extensions==1.1.0",
    "django-stubs==5.2.8",
    "django-stubs-ext==5.2.8",
    "types-pyyaml==6.0.12.20250915",
    "typing-inspection==0.4.2",
]

# Security scanning tools
security = [
    "bandit==1.8.0",
    "safety==3.2.11",
    "safety-schemas==0.0.17",
    "stevedore==5.6.0",
]

# Full development environment (includes all groups + additional dev tools)
dev = [
    {include-group = "test"},
    {include-group = "lint"},
    {include-group = "type-check"},
    {include-group = "security"},
    # Django development tools
    "django-debug-toolbar==6.1.0",
    # Data validation
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "annotated-types==0.7.0",
    "marshmallow==4.1.1",
    # CLI tools
    "typer==0.20.1",
    "click==8.3.1",
    "rich==14.2.0",
    "shellingham==1.5.4",
    # Authentication & cryptography
    "authlib==1.6.6",
    "cryptography==46.0.3",
    "cffi==2.0.0",
    "pycparser==2.23",
    # HTTP & networking
    "requests==2.32.5",
    "urllib3==2.6.2",
    "certifi==2025.11.12",
    "idna==3.11",
    "charset-normalizer==3.4.4",
    # YAML & config parsing
    "pyyaml==6.0.3",
    "ruamel-yaml==0.18.17",
    "ruamel-yaml-clib==0.2.15",
    "dparse==0.6.4",
    # Template rendering
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    # Markdown rendering
    "markdown-it-py==4.0.0",
    "mdurl==0.1.2",
    "pygments==2.19.2",
    # Build & packaging tools
    "setuptools==80.9.0",
    "packaging==25.0",
    "filelock==3.12.4",
    "platformdirs==4.5.1",
    # Virtual environment tools
    "virtualenv==20.35.4",
    "distlib==0.4.0",
    # Utilities
    "colorama==0.4.6",
    "librt==0.7.4",
]

# ============================================================================
# Ruff Configuration
# ============================================================================
[tool.ruff]
line-length = 88
target-version = "py314"
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "migrations",
    ".pytest_cache",
    "htmlcov",
    ".tox",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "DJ",  # Django
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "S",   # flake8-bandit (security)
    "T20", # flake8-print
    ##IMPLEMENT LATER "D",   # pydocstyle
]
ignore = [
    "E203",  # Whitespace before ':' (conflicts with formatters)
    "E501",  # Line too long (handled by formatter)
    "F401",  # Unused import (false positives with Django signals)
    "S101",  # Use of assert (acceptable in tests)
    "S105",  # Possible hardcoded password (false positives in Django settings)
    "S106",  # Possible hardcoded password (false positives in Django settings)
    "D203",  # 1 blank line required before class docstring (conflicts with D211)
    "D213",  # Multi-line docstring summary should start at second line (conflicts with D212)
## Docstring requirements (ENABLE these WHEN READY to write comprehensive docs)
    "D100",  # Missing module docstring
    "D104",  # Missing package docstring
    "D107",  # Missing __init__ docstring
]

[tool.ruff.lint.per-file-ignores]
"**/migrations/*" = ["DJ"]
"**/tests/*" = ["S101", "T20", "D100", "D101", "D102", "D103", "D104"]
"**/test_*.py" = ["S101", "T20", "D100", "D101", "D102", "D103", "D104"]
"**/__init__.py" = ["D100", "D104"]
"manage.py" = ["T20", "D100", "D103"]
"**/settings*.py" = ["S105", "S106", "D100", "D104"]
"**/apps.py" = ["F401", "D100", "D104"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
known-first-party = ["skincare_project", "allergies", "users"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

# ============================================================================
# Mypy Configuration
# ============================================================================
[tool.mypy]
python_version = "3.14"
plugins = ["mypy_django_plugin.main"]
files = ["allergies", "users", "skincare_project"]
exclude = [".*?/migrations/.*", ".*?/tests/.*", "manage.py"]
strict = false
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false
disallow_any_unimported = false
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true
pretty = true
ignore_missing_imports = true
strict_optional = true

## strict = true
## Optional: Enable mypy strict mode to more
## aggressively catch invalid settings access

# Django-specific settings
[tool.django-stubs]
django_settings_module = "skincare_project.settings"

[[tool.mypy.overrides]]
module = [
    "*.migrations.*",
    "manage",
]
ignore_errors = true

# ============================================================================
# Pytest Configuration
# ============================================================================
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "skincare_project.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["allergies/tests", "users/tests"]
addopts = [
    "--cov",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
markers = [
    "integration: Integration tests (slower)",
    "slow: Slow tests that take more than 1 second",
    "unit: Fast unit tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ============================================================================
# Coverage Configuration
# ============================================================================
[tool.coverage.run]
branch = true
source = ["allergies", "users", "skincare_project"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "manage.py",
    "*/wsgi.py",
    "*/asgi.py",
    "*/settings.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 50
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
    "if settings.DEBUG:",
    "class Meta",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.hatch.build.targets.wheel]
packages = ["allergies", "users", "skincare_project"]

[tool.deptry]
extend_exclude = ["tests"] # Ignore the tests directory for production dependency checks
